Add img v2 related structures.
Signed-off-by: mk124 <mk124a@gmail.com>

--- a/UNMM-SA-WRAPPER.vcxproj
+++ b/UNMM-SA-WRAPPER.vcxproj
@@ -93,6 +93,9 @@
     <None Include="eax.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="gtaun\unmm\archive\imgv2\ImgEntry.hpp" />
+    <ClInclude Include="gtaun\unmm\archive\imgv2\ImgHeader.hpp" />
+    <ClInclude Include="gtaun\unmm\archive\imgv2\ImgV2.hpp" />
     <ClInclude Include="gtaun\unmm\CoveringMapManager.hpp" />
     <ClInclude Include="subhook\subhook.h" />
   </ItemGroup>
