add imgv2 reader. fix wrong type of member 'size' (should be uint32_t) in ImgEntry & delete useless member 'sizeSecond'. add include of ImgReader in ImgV2.hpp
Signed-off-by: Shindo Wu <cn.shindo@gmail.com>

--- a/UNMM-SA-WRAPPER.vcxproj
+++ b/UNMM-SA-WRAPPER.vcxproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgEntry.hpp" />
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgHeader.hpp" />
+    <ClInclude Include="gtaun\unmm\archive\imgv2\ImgReader.hpp" />
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgV2.hpp" />
     <ClInclude Include="gtaun\unmm\CoveringMapManager.hpp" />
     <ClInclude Include="subhook\subhook.h" />
