Functions basically completed.
add gtaun/unmm/Utils.hpp, with 'endWith' & 'trim'.
add gtaun/unmm/archive/imgv2/FakeImgGenerator.hpp, to generate fake Img for covering.
add gtaun/unmm/sa/FileProcesser.hpp, to process files in covered directory.
add constant ENTRY_SIZE (32) to imgv2::ImgEntry & add member 'fakeOffset' for generating fake Img.
add constant HEADER_SIZE(8) to imgv2::ImgHeader.
little changes to imgv2::ImgReader.
fix return value type of method 'read' in CoveringMapManager.
basically complete EaxWrapper.cpp with above classes.

Signed-off-by: Shindo Wu <cn.shindo@gmail.com>

--- a/UNMM-SA-WRAPPER.vcxproj
+++ b/UNMM-SA-WRAPPER.vcxproj
@@ -94,10 +94,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgEntry.hpp" />
+    <ClInclude Include="gtaun\unmm\archive\imgv2\ImgGenerator.hpp" />
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgHeader.hpp" />
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgReader.hpp" />
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgV2.hpp" />
     <ClInclude Include="gtaun\unmm\CoveringMapManager.hpp" />
+    <ClInclude Include="gtaun\unmm\sa\FileProcesser.hpp" />
+    <ClInclude Include="gtaun\unmm\Utils.hpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+      </ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="subhook\subhook.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
