add 'std::shared_ptr' to 'reader' & 'mapManager' in FakeImgGenerator. delete 'operator bool()' in ImgReader. modify EaxWrapper.cpp to adapt above changes.
Signed-off-by: Shindo Wu <cn.shindo@gmail.com>

--- a/UNMM-SA-WRAPPER.vcxproj
+++ b/UNMM-SA-WRAPPER.vcxproj
@@ -94,7 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgEntry.hpp" />
-    <ClInclude Include="gtaun\unmm\archive\imgv2\ImgGenerator.hpp" />
+    <ClInclude Include="gtaun\unmm\archive\imgv2\FakeImgGenerator.hpp" />
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgHeader.hpp" />
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgReader.hpp" />
     <ClInclude Include="gtaun\unmm\archive\imgv2\ImgV2.hpp" />
