--- a/UNMM-SA-WRAPPER.vcxproj.filters
+++ b/UNMM-SA-WRAPPER.vcxproj.filters
@@ -47,11 +47,11 @@
     <ClInclude Include="gtaun\unmm\Utils.hpp">
       <Filter>gtaun::unmm</Filter>
     </ClInclude>
-    <ClInclude Include="gtaun\unmm\sa\FileProcesser.hpp">
-      <Filter>gtaun::unmm::sa</Filter>
-    </ClInclude>
     <ClInclude Include="gtaun\unmm\archive\imgv2\FakeImgGenerator.hpp">
       <Filter>gtaun::unmm::archive::imgv2</Filter>
+    </ClInclude>
+    <ClInclude Include="gtaun\unmm\FileProcesser.hpp">
+      <Filter>gtaun::unmm</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
